--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,9 +80,19 @@
     }
 
     .lousy-text {
-      @apply leading-loose text-primary/70 text-pretty;
+      @apply leading-relaxed text-primary/70 text-pretty;
+    }
+
+    .invert-colors {
+      -webkit-filter: grayscale(1) invert(1);
+      filter: grayscale(1) invert(1);
+    }
+
+    .fade-image-top {
+      @apply relative after:absolute after:inset-0 after:bg-gradient-to-b after:from-primary-foreground/35 after:to-transparent;
+
+      &::after {
+        content: ''
+      }
     }
   }
-   
-  
-
